cyrus/sasl2127/firewall/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sun Jan 14 00:28:52 2018
*mangle
:PREROUTING ACCEPT [257:27058]
:INPUT ACCEPT [58:4024]
:FORWARD ACCEPT [199:23034]
:OUTPUT ACCEPT [30:2760]
:POSTROUTING ACCEPT [229:25794]
COMMIT
# Completed on Sun Jan 14 00:28:52 2018
# Generated by iptables-save v1.6.0 on Sun Jan 14 00:28:52 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [195:22698]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i eth2 -j ACCEPT
-A INPUT -d 192.167.27.14/32 -i eth1 -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -d 192.167.27.14/32 -i eth1 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -d 192.167.27.24/32 -i eth2 -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -d 192.167.27.24/32 -i eth2 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -d 192.167.27.14/32 -i eth1 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -d 192.167.27.14/32 -i eth1 -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -d 192.167.27.24/32 -i eth2 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -d 192.167.27.24/32 -i eth2 -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -d 192.167.27.10/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.11/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.12/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.13/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.14/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.20/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.21/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.22/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.23/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.167.27.24/32 -i eth2 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.168.27.2/32 -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.168.27.2/32 -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -d 192.168.27.2/32 -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -j LOG --log-prefix "INPUT-v4:"
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -j LOG --log-prefix "FORWARD-v4:"
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o eth1 -j ACCEPT
-A OUTPUT -o eth2 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "OUTPUT-v4:"
COMMIT
# Completed on Sun Jan 14 00:28:52 2018
# Generated by iptables-save v1.6.0 on Sun Jan 14 00:28:52 2018
*nat
:PREROUTING ACCEPT [2:168]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [2:120]
-A PREROUTING -d 192.168.27.10/32 -i eth0 -j DNAT --to-destination 198.51.100.7
-A PREROUTING -d 192.168.27.11/32 -i eth0 -j DNAT --to-destination 198.51.100.8
-A PREROUTING -d 192.168.27.12/32 -i eth0 -j DNAT --to-destination 198.51.100.9
-A PREROUTING -d 192.168.27.13/32 -i eth0 -j DNAT --to-destination 198.51.100.10
-A PREROUTING -d 192.168.27.14/32 -i eth0 -j DNAT --to-destination 198.51.100.11
-A PREROUTING -d 192.168.27.20/32 -i eth0 -j DNAT --to-destination 203.0.113.7
-A PREROUTING -d 192.168.27.21/32 -i eth0 -j DNAT --to-destination 203.0.113.8
-A PREROUTING -d 192.168.27.22/32 -i eth0 -j DNAT --to-destination 203.0.113.9
-A PREROUTING -d 192.168.27.23/32 -i eth0 -j DNAT --to-destination 203.0.113.10
-A PREROUTING -d 192.168.27.24/32 -i eth0 -j DNAT --to-destination 203.0.113.11
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -s 198.51.100.7/32 -o eth0 -j SNAT --to-source 198.168.27.10
-A POSTROUTING -s 198.51.100.8/32 -o eth0 -j SNAT --to-source 198.168.27.11
-A POSTROUTING -s 198.51.100.9/32 -o eth0 -j SNAT --to-source 198.168.27.12
-A POSTROUTING -s 198.51.100.10/32 -o eth0 -j SNAT --to-source 198.168.27.13
-A POSTROUTING -s 198.51.100.11/32 -o eth0 -j SNAT --to-source 198.168.27.14
-A POSTROUTING -s 203.0.113.7/32 -o eth0 -j SNAT --to-source 198.168.27.20
-A POSTROUTING -s 203.0.113.8/32 -o eth0 -j SNAT --to-source 198.168.27.21
-A POSTROUTING -s 203.0.113.9/32 -o eth0 -j SNAT --to-source 198.168.27.22
-A POSTROUTING -s 203.0.113.10/32 -o eth0 -j SNAT --to-source 198.168.27.23
-A POSTROUTING -s 203.0.113.11/32 -o eth0 -j SNAT --to-source 198.168.27.24
COMMIT
# Completed on Sun Jan 14 00:28:52 2018
